# snippy

./: .gitignore  AGENT.md  CNAME  Justfile  README.md  index.html
.githooks/: pre-push
.github/workflows/: rust.yml
client/: Cargo.toml  Trunk.toml  effects.js  index.html  index.scss  public-footprint.html
client/src/: boids_background.rs  main.rs  settings.rs  simulation.rs
scripts/: install-hooks  list-hooks  research_scrape.py
server/: Cargo.toml
server/src/: main.rs
