[package]
name = "snippy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
imp = "0.1.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
yew = { version = "0.21", features = ["csr"] }
gloo = "0.10"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]